--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "pg": "^7.4.3",
+    "require-dir": "^1.0.0",
     "socket.io": "^2.1.1",
     "socket.io.session": "^1.0.13"
   }
