--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DB_NAME=dating_app
-TEST_DB_NAME=dating_app_test
+DB_NAME=typetenic
+TEST_DB_NAME=typetenic_test
 
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
