--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -137,6 +137,9 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-linear-gradient')
+    compile project(':react-native-picker')
+    compile project(':react-native-config')
     compile project(':react-native-vector-icons')
     compile project(':react-native-navigation')
     compile fileTree(dir: "libs", include: ["*.jar"])
