--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,18 +7,26 @@
     "test": "jest"
   },
   "dependencies": {
-    "@types/react-native-navigation": "^2.0.0",
+    "axios": "^0.18.0",
     "react": "16.4.1",
     "react-native": "0.56.0",
-    "react-native-navigation": "^1.1.480",
+    "react-native-config": "^0.11.5",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-linear-gradient": "^2.4.2",
+    "react-native-navigation": "^1.1.483",
+    "react-native-picker-select": "^4.2.0",
     "react-native-vector-icons": "^5.0.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react": "^16.4.11",
     "@types/react-native": "^0.56.10",
+    "@types/react-native-datepicker": "^1.6.5",
+    "@types/react-native-navigation": "^2.0.0",
+    "@types/react-redux": "^6.0.6",
     "babel-jest": "23.4.2",
     "babel-preset-react-native": "^5",
     "jest": "23.5.0",
