--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "jwt-simple": "^0.5.1",
     "knex": "^0.15.2",
+    "multer": "^1.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pg": "^7.4.3",
