--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "react-native-linear-gradient": "^2.4.2",
     "react-native-navigation": "^1.1.483",
     "react-native-picker-select": "^4.2.0",
+    "react-native-range-slider": "^0.1.0",
     "react-native-vector-icons": "^5.0.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "toggle-switch-react-native": "^1.0.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
