--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.56.0",
     "react-native-config": "^0.11.5",
     "react-native-datepicker": "^1.7.2",
+    "react-native-gifted-chat": "^0.4.3",
     "react-native-image-picker": "^0.26.10",
     "react-native-linear-gradient": "^2.4.2",
     "react-native-navigation": "^1.1.483",
