--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "passport-jwt": "^4.0.0",
     "pg": "^7.4.3",
     "require-dir": "^1.0.0",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1"
   }
 }
