--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.1.1",
     "toggle-switch-react-native": "^1.0.0"
   },
   "devDependencies": {
