--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@types/react": "^16.4.11",
     "@types/react-native": "^0.56.10",
     "@types/react-native-datepicker": "^1.6.5",
+    "@types/react-native-fbsdk": "^0.6.2",
     "@types/react-native-navigation": "^2.0.0",
     "@types/react-redux": "^6.0.6",
     "babel-jest": "23.4.2",
