--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "jwt-simple": "^0.5.1",
     "knex": "^0.15.2",
     "multer": "^1.3.1",
+    "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pg": "^7.4.3",
