Add HOST variable to .env file

--- a/backend/.env
+++ b/backend/.env
@@ -5,9 +5,8 @@ DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
 NODE_ENV=development
+HOST=http://localhost
 PORT=8080
 
 FACEBOOK_ID=571564926591911
 FACEBOOK_CLIENT_SECRET=b6c68e8cbf08c1d037f0dd30126cb674
-
-testing
