--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "jwt-simple": "^0.5.1",
     "knex": "^0.15.2",
+    "morgan": "^1.9.0",
     "multer": "^1.3.1",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
