Fixed list sent request function

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 ENV=dev
-# API_SERVER=http://localhost:8080
-API_SERVER=https://khchick.com
+API_SERVER=http://localhost:8080
+# API_SERVER=https://khchick.com
 
 FACEBOOK_APP_ID=571564926591911
