--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-native-navigation": "^1.1.483",
     "react-native-picker-select": "^4.2.0",
     "react-native-range-slider": "^0.1.0",
+    "react-native-snap-carousel": "^3.7.3",
     "react-native-vector-icons": "^5.0.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
