--- a/frontend/ios/typetenic/Info.plist
+++ b/frontend/ios/typetenic/Info.plist
@@ -83,6 +83,7 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>BungeeShade-Regular.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
