--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-native-gifted-chat": "^0.4.3",
     "react-native-image-picker": "^0.26.10",
     "react-native-linear-gradient": "^2.4.2",
+    "react-native-modal": "^6.5.0",
     "react-native-navigation": "^1.1.483",
     "react-native-picker-select": "^4.2.0",
     "react-native-range-slider": "^0.1.0",
