--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "react-native-navigation": "^1.1.483",
     "react-native-picker-select": "^4.2.0",
     "react-native-range-slider": "^0.1.0",
+    "react-native-responsive-fontsize": "^0.1.2",
+    "react-native-responsive-screen": "^1.1.9",
     "react-native-vector-icons": "^5.0.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
