--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-native-config": "^0.11.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-fbsdk": "^0.7.0",
+    "react-native-flip-card": "^3.5.2",
     "react-native-gifted-chat": "^0.4.3",
     "react-native-image-picker": "^0.26.10",
     "react-native-linear-gradient": "^2.4.2",
